--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -1,9 +1,9 @@
-flask,
-faker,
-sqlite3,
-pandas,
-bcrypt,
-pymongo,
-flask_cors,
-apscheduler,
+flask
+faker
+sqlite3
+pandas
+bcrypt
+pymongo
+flask_cors
+apscheduler
 openai
